backend/mainAppDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-app-container
          image: zizoufg/main-app:v1.0
          volumeMounts:
            - name: txt-volume
              mountPath: /backend/mysqlConnectorInstances.txt
      volumes:
        - name: txt-volume
          persistentVolumeClaim:
            claimName: shared-txt-pvc
