backend/mysqlConnectorDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-connector-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-connector
  template:
    metadata:
      labels:
        app: mysql-connector
    spec:
      hostNetwork: true
      containers:
        - name: mysql-connector
          image: zizoufg/mysql_connector:v1.0
          ports:
            - containerPort: 3002
        - name: consul-agent
          image: consul:1.9.9
          args: ["agent", "-dev"]
