backend/chartMuseum-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chartmuseum
spec:
  type:  LoadBalancer
  selector:
    app: chartmuseum
  ports:
  - protocol: TCP
    port: 70
    targetPort: 8080
