backend/mainAppService.yml
apiVersion: v1
kind: Service
metadata:
  name: main-app-service
spec:
  type:  LoadBalancer
  selector:
    app: main-app  
  ports:
    - protocol: TCP
      port: 100 
      targetPort: 3001
