backend/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mysql-namespace
spec:
  type: LoadBalancer
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
