backend/mysqlConnectorService.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-connector-service
spec:
  type: LoadBalancer
  selector:
    app: mysql-connector  
  ports:
    - protocol: TCP
      port: 3002 
      targetPort: 3002
