backend/mysqlConnectorIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: default
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-connector-service
            port:
              number: 81  # Port for Consul's HTTP API
